--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "mailgun/mailgun-php": "^4.3",
         "nyholm/psr7": "^1.8",
-        "railsware/mailtrap-php": "^2.0",
         "symfony/http-client": "^7.1"
     },
     "require-dev": {
