User register, login and logout is ready

--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_ENV=testing
+APP_KEY=base64:vhKTghcCETtqsjIyJ+g6HdqK6r4dxj1BTrV1ms+GGTM=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=ledgersyncapi
+DB_DATABASE=testing
 DB_USERNAME=sail
 DB_PASSWORD=password
 
@@ -66,10 +66,15 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 MAILGUN_DOMAIN="ledgersync.erdiarikan.com"
-MAILGUN_SECRET=""
+MAILGUN_SECRET="8fe327854dcec29a4506bb4fe1eb6cb7"
 MAILGUN_ENDPOINT="api.eu.mailgun.net"
 
 XERO_CLIENT_ID=""
 XERO_CLIENT_SECRET=""
 XERO_REDIRECT_URI="http://localhost/auth/callback"
 XERO_SCOPES="accounting.transactions accounting.transactions.read accounting.reports.read accounting.reports.tenninetynine.read accounting.journals.read accounting.settings accounting.settings.read accounting.contacts accounting.contacts.read accounting.attachments accounting.attachments.read accounting.budgets.read payroll.employees payroll.employees.read payroll.payruns payroll.payruns.read payroll.payslip payroll.payslip.read payroll.timesheets payroll.timesheets.read payroll.settings payroll.settings.read files files.read assets assets.read projects projects.read paymentservices bankfeeds finance.accountingactivity.read finance.cashvalidation.read finance.statements.read workflowmax workflowmax.read workflowmax.job workflowmax.job.read workflowmax.client workflowmax.client.read workflowmax.staff workflowmax.staff.read workflowmax.time workflowmax.time.read practicemanager practicemanager.read practicemanager.job practicemanager.job.read practicemanager.client practicemanager.client.read practicemanager.staff practicemanager.staff.read practicemanager.time practicemanager.time.read hq.clients.read hq.staff hq.staff.read"
+
+PASSPORT_PERSONAL_ACCESS_CLIENT_ID=1
+PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET=secret
+PASSPORT_PASSWORD_GRANT_CLIENT_ID=2
+PASSPORT_PASSWORD_GRANT_CLIENT_SECRET=secret
