--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^11.31",
+        "laravel/passport": "^12.0",
         "laravel/tinker": "^2.9",
         "mailgun/mailgun-php": "^4.3",
         "nyholm/psr7": "^1.8",
