--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^3.5",
         "pestphp/pest-plugin-laravel": "^3.0",
-        "ryoluo/sail-ssl": "^1.3"
+        "ryoluo/sail-ssl": "^1.3",
+        "squizlabs/php_codesniffer": "^3.11"
     },
     "autoload": {
         "psr-4": {
