--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "nyholm/psr7": "^1.8",
         "owen-it/laravel-auditing": "^13.6",
         "spatie/laravel-medialibrary": "^11.10",
-        "symfony/http-client": "^7.1"
+        "symfony/http-client": "^7.1",
+        "ext-http": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
